--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Lawo Sales-Contacts</title>
   </head>
   <body>
-    <main id="app__sales-contacts" class="content"></main> 
+    <style>
+      @import url("http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700");
+
+      @media all and (min-width: 1100px) {
+        main {
+          width: 980px;
+          margin: 50px auto;
+        }
+      }
+    </style>
+    <main id="app__sales-contacts" class="content"></main>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
